# mstrap

./: .ameba.yml  .gitignore  .tool-versions  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  expected.libs  expected.libs.darwin  expected.libs.linux  gon.ci.hcl  gon.hcl  meson.build  meson_options.txt  shard.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question-about-use.md
.github/workflows/: ci.yml  provision.yml  release.yml
config/: darwin-arm64.ini  darwin-x86_64.ini  linux-aarch64-gnu.ini  linux-aarch64-musl.ini  linux-aarch64.ini  linux-x86_64-gnu.ini  linux-x86_64-musl.ini  linux-x86_64.ini
docker/: config.hcl  fedora-32-test.Dockerfile  test.sh
script/: fedora-32-test.sh
spec/: mstrap_spec.cr  readline_spec.cr  spec_helper.cr
spec/mstrap/: configuration_spec.cr  paths_spec.cr
spec/provisioning/: test.sh
spec/provisioning/docker/: archlinux-test.Dockerfile  config.hcl  fedora-37-test.Dockerfile  fedora-38-test.Dockerfile  fedora-39-test.Dockerfile  test.sh  ubuntu-2204-test.Dockerfile  ubuntu-2404-test.Dockerfile
spec/provisioning/spec/: spec_helper.rb
spec/provisioning/spec/localhost/: dependencies_step_spec.rb  init_step_spec.rb  shell_step_spec.rb
src/: cli.cr  mstrap.cr  project_cli.cr  readline.cr
src/mstrap/: bootstrapper.cr  ca_cert_installer.cr  cli.cr  cli_options.cr  configuration.cr  def.cr  docker.cr  dsl.cr  errors.cr  fs.cr  paths.cr  platform.cr  profile_fetcher.cr  project.cr  project_bootstrapper.cr  project_cli.cr  runtime.cr  runtime_macros.cr  runtime_manager.cr  step.cr  tracker.cr  user.cr  version.cr  web_bootstrapper.cr
src/mstrap/bootstrappers/: default_bootstrapper.cr  script_bootstrapper.cr  web_bootstrapper.cr
src/mstrap/defs/: config_def.cr  gem_def.cr  global_pkg_def.cr  npm_pkg_def.cr  pip_pkg_def.cr  pkg_def.cr  profile_config_def.cr  profile_def.cr  project_def.cr  runtime_config_def.cr  runtime_def.cr  runtimes_config_def.cr  user_def.cr
src/mstrap/dsl/: logging.cr  system.cr
src/mstrap/files/: Brewfile  nginx.conf.erb  services.yml
src/mstrap/platform/: darwin.cr  linux.cr
src/mstrap/platform/darwin/: macos.cr
src/mstrap/platform/linux/: archlinux.cr  debian.cr  fedora.cr  rhel.cr
src/mstrap/projects/: ember_cli_project.cr  javascript_project.cr  python_project.cr  rails_project.cr  ruby_project.cr  web_project.cr
src/mstrap/runtime_managers/: asdf.cr  mise.cr  rustup.cr
src/mstrap/runtimes/: crystal.cr  go.cr  node.cr  php.cr  python.cr  ruby.cr  rust.cr
src/mstrap/steps/: compose_step.cr  debug_step.cr  dependencies_step.cr  init_step.cr  node_step.cr  projects_step.cr  python_step.cr  ruby_step.cr  runtimes_step.cr  services_step.cr  shell_step.cr  steps_step.cr  update_profiles_step.cr
src/mstrap/supports/: ca_cert_installer.cr  dnsmasq.cr  docker.cr  mise_installer.cr  mkcert.cr  rustup_installer.cr  strap_sh_installer.cr
src/mstrap/templates/: Brewfile.cr  Brewfile.ecr  env.sh.ecr  env_sh.cr  hub.yml.ecr  hub_yml.cr  nginx.conf.cr  nginx.conf.ecr  services-internal.yml.cr  services-internal.yml.ecr
src/mstrap/utils/: docker.cr  env.cr  logging.cr  macros.cr  rbenv.cr  rvms.cr  system.cr
subprojects/: bdwgc.wrap  pcre.wrap
